[workspace]
members = [
"library/bfm/ahb3",
"library/bfm/apb4",
"library/bfm/axi4",
"library/bfm/bb",
"library/bfm/biu",
"library/bfm/wb",
"library/core/ahb3",
"library/core/apb4",
"library/core/axi4",
"library/core/bb",
"library/core/biu",
"library/core/wb",
"library/pu/ahb3",
"library/pu/apb4",
"library/pu/axi4",
"library/pu/bb",
"library/pu/biu",
"library/pu/wb",
"library/soc/ahb3",
"library/soc/apb4",
"library/soc/axi4",
"library/soc/bb",
"library/soc/biu",
"library/soc/wb",
"library/mpsoc/ahb3",
"library/mpsoc/apb4",
"library/mpsoc/axi4",
"library/mpsoc/bb",
"library/mpsoc/biu",
"library/mpsoc/wb",

"application/bfm/ahb3",
"application/bfm/apb4",
"application/bfm/axi4",
"application/bfm/bb",
"application/bfm/biu",
"application/bfm/wb",
"application/core/ahb3",
"application/core/apb4",
"application/core/axi4",
"application/core/bb",
"application/core/biu",
"application/core/wb",
"application/pu/ahb3",
"application/pu/apb4",
"application/pu/axi4",
"application/pu/bb",
"application/pu/biu",
"application/pu/wb",
"application/soc/ahb3",
"application/soc/apb4",
"application/soc/axi4",
"application/soc/bb",
"application/soc/biu",
"application/soc/wb",
"application/mpsoc/ahb3",
"application/mpsoc/apb4",
"application/mpsoc/axi4",
"application/mpsoc/bb",
"application/mpsoc/biu",
"application/mpsoc/wb"
]
