[workspace]
members = [
"library/bfm/ahb4",
"library/bfm/apb4",
"library/bfm/axi4",
"library/bfm/bb",
"library/bfm/tl",
"library/bfm/wb",
"library/core/ahb4",
"library/core/apb4",
"library/core/axi4",
"library/core/bb",
"library/core/tl",
"library/core/wb",
"library/pu/ahb4",
"library/pu/apb4",
"library/pu/axi4",
"library/pu/bb",
"library/pu/tl",
"library/pu/wb",
"library/soc/ahb4",
"library/soc/apb4",
"library/soc/axi4",
"library/soc/bb",
"library/soc/tl",
"library/soc/wb",
"library/mpsoc/ahb4",
"library/mpsoc/apb4",
"library/mpsoc/axi4",
"library/mpsoc/bb",
"library/mpsoc/tl",
"library/mpsoc/wb",

"application/bfm/ahb4",
"application/bfm/apb4",
"application/bfm/axi4",
"application/bfm/bb",
"application/bfm/tl",
"application/bfm/wb",
"application/core/ahb4",
"application/core/apb4",
"application/core/axi4",
"application/core/bb",
"application/core/tl",
"application/core/wb",
"application/pu/ahb4",
"application/pu/apb4",
"application/pu/axi4",
"application/pu/bb",
"application/pu/tl",
"application/pu/wb",
"application/soc/ahb4",
"application/soc/apb4",
"application/soc/axi4",
"application/soc/bb",
"application/soc/tl",
"application/soc/wb",
"application/mpsoc/ahb4",
"application/mpsoc/apb4",
"application/mpsoc/axi4",
"application/mpsoc/bb",
"application/mpsoc/tl",
"application/mpsoc/wb"
]
